==> Vasu-Vinaik123/esp32-fan-controller/main/motor.c <==
#include "driver/gpio.h"
#include "motor.h"
#include "driver/ledc.h"

#define ENA 25
#define IN1 27
#define IN2 26

void motor_init(void){
    gpio_set_direction(IN1, GPIO_MODE_OUTPUT);
    gpio_set_direction(IN2, GPIO_MODE_OUTPUT);
    
    ledc_timer_config_t timer = {
        .speed_mode = LEDC_HIGH_SPEED_MODE,
        .timer_num = LEDC_TIMER_0,
        .duty_resolution = LEDC_TIMER_8_BIT,
        .freq_hz = 1000,
        .clk_cfg = LEDC_AUTO_CLK
    };

    ledc_timer_config(&timer);

    ledc_channel_config_t channel = {
        .gpio_num = ENA,
        .speed_mode = LEDC_HIGH_SPEED_MODE,
        .channel = LEDC_CHANNEL_0,
        .timer_sel = LEDC_TIMER_0,
        .duty = 0,
        .hpoint = 0
    };

    ledc_channel_config(&channel);

}   


void motor_set_speed(int speed){
    if (speed < 33) speed = 33;
    if (speed > 100) speed = 100;

    int duty = (speed*255)/100;

    gpio_set_level(IN1, 1);
    gpio_set_level(IN2, 0);

    ledc_set_duty(LEDC_HIGH_SPEED_MODE, LEDC_CHANNEL_0, duty);
    ledc_update_duty(LEDC_HIGH_SPEED_MODE, LEDC_CHANNEL_0);
}

void motor_stop(void){

    ledc_set_duty(LEDC_HIGH_SPEED_MODE, LEDC_CHANNEL_0, 0);
    ledc_update_duty(LEDC_HIGH_SPEED_MODE, LEDC_CHANNEL_0);
    gpio_set_level(IN1, 0);
    gpio_set_level(IN2, 0);
}
